# ignite-ms

./: .dockerignore  .gitignore  BENCHMARKING.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  benchmark.py  docker-compose.yml  quickstart.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/ignite-ms/: Cargo.toml  build.rs
crates/ignite-ms-bench/: Cargo.toml
crates/ignite-ms-bench/src/: main.rs
crates/ignite-ms-embed/: Cargo.toml
crates/ignite-ms-embed/src/: embed.rs  input.rs  main.rs  reorder.rs
crates/ignite-ms-embed/src/output/: mod.rs  npy.rs  parquet_writer.rs
crates/ignite-ms/scripts/: build_vocab_cache.py  export_pooling.py
crates/ignite-ms/src/: bucket.rs  cache.rs  engine.rs  error.rs  inference.rs  lib.rs  normalize.rs  provision.rs  tokenize.rs
examples/: stream_embed.rs
native/: trt_runner.cpp
