[package]
name = "ignite-ms-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ignite-ms — high-throughput GPU text embedding CLI"

[features]
default = ["native-trt"]
native-trt = ["ignite-ms/native-trt"]

[[bin]]
name = "ignite-ms"
path = "src/main.rs"

[dependencies]
ignite-ms = { path = "../ignite-ms", default-features = false }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
zstd = "0.13"
flate2 = "1"
crossbeam = "0.8"
arrow = { version = "53", features = ["ffi"] }
parquet = { version = "53", features = ["zstd"] }
indicatif = "0.17"
